--- a/package.json
+++ b/package.json
@@ -3,22 +3,33 @@
   "version": "1.0.0",
   "description": "WebdriverIO tests for localcoding.us",
   "scripts": {
-    "test": "npx wdio run wdio.conf.js"
+    "test:chrome": "npx wdio run config/common/chrome.conf.js",
+    "test:chrome:headless": "npx wdio run config/common/chrome.headless.conf.js",
+    "test:firefox": "npx wdio run config/firefox.conf.js",
+    "test:firefox:headless": "npx wdio run config/firefox.headless.conf.js",
+    "report:serve": "npx allure serve allure-results",
+    "report:generate": "npx allure generate allure-results -o allure-report --clean",
+    "report:open": "npx allure open allure-report"
   },
   "keywords": [],
   "author": "tatty",
   "license": "ISC",
   "dependencies": {
-    "@wdio/cli": "^7.11.0"
+    "@wdio/cli": "^7.11.0",
+    "allure-commandline": "^2.13.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/register": "^7.15.3",
+    "@wdio/allure-reporter": "^7.13.2",
     "@wdio/devtools-service": "^7.11.0",
     "@wdio/local-runner": "^7.11.0",
     "@wdio/mocha-framework": "^7.11.0",
-    "@wdio/spec-reporter": "^7.10.1"
+    "@wdio/spec-reporter": "^7.10.1",
+    "deepmerge": "^4.2.2",
+    "geckodriver": "^2.0.4",
+    "wdio-geckodriver-service": "^2.0.3"
   }
 }
